Make the code handling a win callable from the outside
We're gonna need this when someone else wins
Also, some refactoring

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="win_message">Gewonnen!</string>
+    <string name="lose_message">gewinnt!</string>
     <string name="play_again_button_text">Hier klicken, um nochmal zu spielen</string>
     <string name="refresh_button_text">Reload</string>
     <string name="exit_button_text">Exit</string>
