--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Goth Bingo</string>
     <string name="win_message">You win!</string>
+    <string name="lose_message">wins!</string>
     <string name="play_again_button_text">Tap here to play again</string>
     <string name="refresh_button_text">Reload</string>
     <string name="exit_button_text">Exit</string>
