Silence some warnings

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">Goth Bingo</string>
     <string name="win_message">Gewonnen!</string>
     <string name="lose_message">gewinnt!</string>
     <string name="play_again_button_text">Hier klicken, um nochmal zu spielen</string>
     <string name="refresh_button_text">Reload</string>
     <string name="exit_button_text">Exit</string>
     <string name="free_space_text">Freifeld</string>
+    <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
     <string name="prompt_email">Name</string>
