--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="prompt_email">Player name</string>
     <string name="prompt_password">Game ID</string>
     <string name="action_sign_in">Sign in</string>
+
+    <string name="service_notification_text">Connected to server</string>
 </resources>
