--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -14,5 +14,7 @@
     <string name="prompt_password">Game ID</string>
     <string name="action_sign_in">Start</string>
 
-    <string name="service_notification_text">Verbunden zum Server</string>
+    <string name="connected_notification_text">Verbunden zum Server</string>
+    <string name="connecting_notification_text">Verbindung wird hergestellt...</string>
+    <string name="disconnected_notification_text">Verbindung getrennt</string>
 </resources>
