Stringify field download message

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -15,4 +15,6 @@
     <string name="action_sign_in">Start</string>
 
     <string name="service_notification_text">Hintergrunddienst läuft</string>
+
+    <string name="fields_downloading_message">Lade Feldinhalte, bitte warten</string>
 </resources>
