--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="action_sign_in">Sign in</string>
 
     <string name="service_notification_text">Background service running</string>
+
+    <string name="fields_downloading_message">Getting field contents, please wait</string>
 </resources>
