Show an error message if field download failes
If we have cached fields, this error is intentionally ignored

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -17,4 +17,6 @@
     <string name="service_notification_text">Hintergrunddienst läuft</string>
 
     <string name="fields_downloading_message">Lade Feldinhalte, bitte warten</string>
+    <string name="fields_download_failed_title">Download fehlgeschlagen</string>
+    <string name="fields_download_failed_message">Herunteladen der Feldinhalte fehlgeschlagen. Ist die Internetverbindung unterbrochen?</string>
 </resources>
