--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -31,4 +31,7 @@
 
     <string name="ok_action_text">OK</string>
     <string name="cancel_action_text">Abbrechen</string>
+
+    <string name="foreground_notification_channel_name">Gewinnbenachrichtigungen</string>
+    <string name="background_notification_channel_name">Hintergrunddienstbenachrichtigung</string>
 </resources>
