--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Goth Bingo</string>
-    <string name="app_url">https://int80.de/bingo.apk</string>
-    <string name="github_url">https://github.com/jkehne/goth-bingo-android</string>
-
     <string name="share_chooser_title">Goth Bingo teilen</string>
 
     <string name="win_message">Gewonnen!</string>
@@ -11,8 +7,8 @@
     <string name="free_space_text">Freifeld</string>
 
     <string name="play_again_button_text">Hier klicken, um nochmal zu spielen</string>
-    <string name="refresh_button_text">Reload</string>
-    <string name="exit_button_text">Exit</string>
+    <string name="refresh_button_text">Felder neu laden</string>
+    <string name="exit_button_text">Spiel beenden</string>
     <string name="suggest_button_text">Neues Feld vorschlagen</string>
     <string name="suggest_dialog_text">Bitte gib deinen Vorschlag hier ein</string>
     <string name="share_button_text">Teilen</string>
@@ -20,7 +16,7 @@
 
     <!-- Strings related to login -->
     <string name="prompt_email">Name</string>
-    <string name="prompt_password">Game ID</string>
+    <string name="prompt_password">Spielname</string>
     <string name="action_sign_in">Start</string>
 
     <string name="service_notification_text">Hintergrunddienst läuft</string>
