Check signatures of downloaded updates before installing

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -34,6 +34,7 @@
     <string name="update_available_title">Update verfügbar</string>
     <string name="update_available_message">Eine neue Version ist verfügbar. Jetzt installieren? (Achtung: Installieren einer neuen Version bricht das laufende Spiel ab.)</string>
     <string name="update_download_failed_message">Update download failed</string>
+    <string name="update_signature_mismatch">Signatur des Updates stimmt nicht überein. Bitte versuche es später noch einmal.</string>
 
     <string name="ok_action_text">OK</string>
     <string name="cancel_action_text">Abbrechen</string>
